add some other pages - organize

--- a/src/stories/Intro.stories.mdx
+++ b/src/stories/Intro.stories.mdx
@@ -1,24 +1,24 @@
 
-<Meta title="Design System/Intro" />
+<Meta title="Design System|1-Intro" />
 
 
 # Get started
 
-Storybook Design System is a reusable component library that helps Storybook contributors build UIs faster. The goal is to make building durable UIs more productive and satisfying.
+Everlywell Design Language System (DLS) is a reusable component library that helps build UIs faster.  The goal is to make building durable UIs more productive and satisfying
 
 ## Install
 
-SDS components are written in React, and its stories are written in [Component Story Format](https://medium.com/storybookjs/component-story-format-66f4c32366df). It requires Storybook version 5.2-beta and up.
+DLS components are written in React, and its stories are written in [Component Story Format](https://medium.com/storybookjs/component-story-format-66f4c32366df). It requires Storybook version 5.2-beta and up.
 
-Add SDS to your project.
+Add DLS to your project.
 
-`npm install --save @storybook/design-system`
+`npm install --save poc-design-system`
 
 ### **Use**
 
 Import components you want into your UI
 
-`import { Button, Badge } from ‘@storybook/design-system’;`
+`import { Button } from ‘poc-design-system’;`
 
 and use them like so
 
@@ -26,12 +26,11 @@ and use them like so
   const example = () => (
     <div>
       <Button appearance="primary" onClick={() => 0}>Do something</Button>
-      <Badge onClick={this.clear}>Cool</Badge>
     </div>
   )
 ```
 
-### **Browse SDS components in your own Storybook**
+### **Browse DLS components in your own Storybook**
 
 Once you add the package, update your .storybook/config.js to import all files ending in .stories.js.
 
@@ -40,21 +39,14 @@ Once you add the package, update your .storybook/config.js to import all files e
   configure(require.context('../src', true, /.stories.js$/), module);
 ```
 
-### **Run and develop SDS locally**
+### **Run and develop DLS locally**
 
-Clone the [SDS GitHub project](https://github.com/storybookjs/design-system) then start Storybook.
+Clone the [DLS GitHub project](https://github.com/storybookjs/design-system) then start Storybook.
 
 `yarn && yarn run storybook`
-
-## Used by
-
-- [Storybook homepage](https://storybook.js.org/)
-- [LearnStorybook.com](https://www.learnstorybook.com/)
-- [ChromaticQA.com](https://www.chromaticqa.com/)
-
-Note: this package is not used in Storybook's UI, but the visual design is identical.
 
 ### **Resources**
 
 - [Introducing Storybook Design System](https://medium.com/storybookjs/introducing-storybook-design-system-23fd9b1ac3c0)
+- [Awesome Storybook References](https://github.com/lauthieb/awesome-storybook)
 - [GitHub repository](https://github.com/storybookjs/design-system)
