update link colors

--- a/src/stories/Intro.stories.mdx
+++ b/src/stories/Intro.stories.mdx
@@ -1,10 +1,8 @@
-
-<Meta title="Design System|1-Intro" />
-
+<Meta title='Design System|1-Intro' />
 
 # Get started
 
-Everlywell Design Language System (DLS) is a reusable component library that helps build UIs faster.  The goal is to make building durable UIs more productive and satisfying
+Everlywell Design Language System (DLS) is a reusable component library that helps build UIs faster. The goal is to make building durable UIs more productive and satisfying.
 
 ## Install
 
