added naming conventions

--- a/src/stories/Typography.stories.mdx
+++ b/src/stories/Typography.stories.mdx
@@ -4,6 +4,8 @@ import { typography } from '../shared/styles';
 
 <Meta title='Design System|3-Typography' />
 
+### Typefaces and Spacings
+
 # Typography
 
 **Font:** Nexa-Regular
